--- a/css/main.css
+++ b/css/main.css
@@ -3,33 +3,38 @@
 #app {
     display: flex;
     flex-direction:column; 
-    font-size: 30px;
     background-image: url(https://images.everyeye.it/img-notizie/l-osservazione-sistema-quantistico-invertire-corrente-v3-308042-1280x720.jpg);
-    border: 1px black solid;
     align-items: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 200%;
+    background-position: fixed;
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ position: relative;
 
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 40px;
     color: white;
+    font-weight: bold;
+    
 }
 
 h2{
-    font-size: 2.5rem;
+    font-size: 30px;
 }
 
 li {
+    font-size: 18px;
     list-style: none;
 }
 
 .elec1, .elec2, .elec3{
+    display: flex;
     background: azure;
     margin: 10px;
     padding: 40px;  
-    width: 500px;
+    width: 230px;
     border-radius: 30px;
     background-image: url(/bolt-solid.svg);
     background-repeat: no-repeat;
