--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ li {
 
 .elec1, .elec2, .elec3{
     display: flex;
-    background: azure;
+    background: rgb(255, 255, 255);
     margin: 10px;
     padding: 40px;  
     width: 230px;
