--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,8 @@ li {
 
 .elec1, .elec2, .elec3{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     background: rgb(255, 255, 255);
     margin: 10px;
     padding: 40px;  
@@ -44,6 +46,3 @@ li {
     background-position: right;
 }
 
-@media screen and{max-width: ;
-    
-}
