--- a/css/main.css
+++ b/css/main.css
@@ -29,12 +29,14 @@ h2{
 li {
     font-size: 18px;
     list-style: none;
+    align-items: center;
 }
 
 .elec1, .elec2, .elec3{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     background: rgb(255, 255, 255);
     margin: 10px;
     padding: 40px;  
