--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ h1{
     font-size: 40px;
     color: white;
     font-weight: bold;
+    align-content: center;
     
 }
 
@@ -32,6 +33,7 @@ li {
     font-size: 18px;
     list-style: none;
     align-items: center;
+    text-align: center;
 }
 
 .elec1, .elec2, .elec3{
