--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-
-
 #app {
     display: flex;
     flex-direction:column;
@@ -13,6 +11,8 @@
     background-position: cover;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  position: relative;
+ max-width: 100vw;
+ min-height: 100vh
 
 }
 
@@ -54,3 +54,9 @@ li {
     background-position: right;
 }
 
+.chart{
+    background-color: white;
+    max-width: 80vw;
+    max-height: 50vh;
+    margin: 50px;
+}
