--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ li {
     text-align: center;
 }
 
-.elec1, .elec2, .elec3{
+.elec1, .elec2, .elec3, .wattcalc{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,3 +61,13 @@ li {
     margin: 50px;
     border-radius: 30px;
 }
+.demo {
+    font-family: sans-serif;
+    border: 1px solid #eee;
+    border-radius: 2px;
+    padding: 20px 30px;
+    margin-top: 1em;
+    margin-bottom: 40px;
+    user-select: none;
+    overflow-x: auto;
+  }
