--- a/css/main.css
+++ b/css/main.css
@@ -1,75 +1,79 @@
 #app {
-    display: flex;
-    flex-direction:column;
-    justify-content: center; 
-    background-image: url(https://eieo.nl/wp-content/uploads/2015/11/eieo-afbeelding-2.jpg);
-    align-items: center;
-    align-content: center;
-    background-size: 100%;
-    background-position: 10%;
-    height: max-content;
-    background-position: cover;
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
- position: relative;
- max-width: 100vw;
- min-height: 100vh
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url(https://eieo.nl/wp-content/uploads/2015/11/eieo-afbeelding-2.jpg);
+  align-items: center;
+  align-content: center;
+  background-size: 100%;
+  background-position: 10%;
+  height: max-content;
+  background-position: cover;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  position: relative;
+  max-width: 100vw;
+  min-height: 100vh;
 }
 
-h1{
-    font-size: 40px;
-    color: white;
-    font-weight: bold;
-    align-content: center;
+h1 {
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+  align-content: center;
+  text-align: center;
+}
+
+h2 {
+  font-size: 30px;
+  align-content: center;
+  text-align: center;
+}
+
+h3{
     text-align: center;
-    
 }
-
-h2{
-    font-size: 30px;
-    align-content: center;
-    text-align: center;
-}
-
 li {
-    font-size: 18px;
-    list-style: none;
-    align-items: center;
-    text-align: center;
+  font-size: 18px;
+  list-style: none;
+  align-items: center;
+  text-align: center;
 }
 
-.elec1, .elec2, .elec3, .wattcalc{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: rgb(255, 255, 255);
-    margin: 10px;
-    padding: 40px;  
-    width: 230px;
-    border-radius: 30px;
-    background-image: url(/bolt-solid.svg);
-    background-repeat: no-repeat;
-    background-size: 10%;
-    background-position: right;
-    box-shadow: 5px 5px 5px black;
+.elec1,
+.elec2,
+.elec3,
+.wattcalc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(255, 255, 255);
+  margin: 10px;
+  padding: 40px;
+  width: 230px;
+  border-radius: 30px;
+  background-image: url(/bolt-solid.svg);
+  background-repeat: no-repeat;
+  background-size: 10%;
+  background-position: right;
+  box-shadow: 5px 5px 5px black;
 }
 
-.chart{
-    background-color: white;
-    max-width: 80vw;
-    max-height: 50vh;
-    margin: 50px;
-    border-radius: 30px;
-    box-shadow: 5px 5px 5px black;
+.chart {
+  background-color: white;
+  max-width: 80vw;
+  max-height: 50vh;
+  margin: 50px;
+  border-radius: 30px;
+  box-shadow: 5px 5px 5px black;
 }
 .demo {
-    font-family: sans-serif;
-    border: 1px solid #eee;
-    border-radius: 2px;
-    padding: 20px 30px;
-    margin-top: 1em;
-    margin-bottom: 40px;
-    user-select: none;
-    overflow-x: auto;
-  }
+  font-family: sans-serif;
+  border: 1px solid #eee;
+  border-radius: 2px;
+  padding: 20px 30px;
+  margin-top: 1em;
+  margin-bottom: 40px;
+  user-select: none;
+  overflow-x: auto;
+}
