--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ h2 {
   text-align: center;
 }
 
-h3{
-    text-align: center;
+h3 {
+  text-align: center;
 }
 li {
   font-size: 18px;
@@ -76,4 +76,44 @@ li {
   margin-bottom: 40px;
   user-select: none;
   overflow-x: auto;
+}
+
+.inputArea {
+  padding: 10px;
+  margin: 10px;
+  text-align: left;
+  font-weight: bold;
+  border: 2px green solid;
+}
+
+input {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 30px;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;  
+}
+
+button {
+  display: flex;
+  align-items: center;
+  box-shadow: 2px 2px 2px;
+  border-radius: 30px;
+  margin: 10px;
+}
+
+  .wattcalc {
+    background-color: red;
+  }
+
+  .statics {
+    border: 2px blue solid;
+  }
+
+.outputArea {
+ margin: 50px;  
 }
